--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "gatsby": "4.22.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+ },
+    "resolutions": {
+    "sharp": "0.33.0",
+    "gatsby-sharp": "1.12.0"
   },
   "scripts": {
     "start": "gatsby build && gatsby serve",
